# dbase-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Resources.md  Ressources.md  flake.nix
.github/workflows/: rust.yml
examples/: datafusion.rs  file.rs  print-content.rs  test_dbase.py
fuzz/: Cargo.toml  Readme.md
fuzz/fuzz_targets/: read_all.rs  reader_new.rs
nix/pkgs/self/: default.nix
src/: codepages.rs  datafusion.rs  de.rs  encoding.rs  error.rs  file.rs  header.rs  lib.rs  memo.rs  python.rs  reading.rs  record.rs  ser.rs  writing.rs
src/encoding/: encoding_rs.rs  gbk.rs  mod.rs  yore.rs
src/field/: conversion.rs  field.rs  mod.rs  types.rs
src/record/: field.rs  mod.rs
tests/: fuzz.rs  test_bugged_file_sync.rs  test_file.rs  test_python.py  test_reading.rs  test_serde.rs  tests.rs
tests/data/: KUNDEN-schema-only.DBF  contain_none_float.dbf  contain_null_padded_numeric.dbf  cp850.dbf  cp936.dbf  stations.dbf  stations_optional.dbf  stations_with_deleted.dbf
