[package]
name = "dbase"
version = "0.4.0"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
description = "Read & Write .dbf in Rust"
license = "MIT"
readme = "README.md"
keywords = ["dbase", "dbf"]
homepage = "https://github.com/tmontaigu/dbase-rs"
repository = "https://github.com/tmontaigu/dbase-rs"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
time = { version = "0.3", features = ["std"] }
serde = { version = "1.0.102", optional = true }
yore = { version = "1.0.1", optional = true }
datafusion = { version = "31", optional = true }
datafusion-expr = { version = "31", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
serde_derive = "1.0.102"
tempfile = "3.4.0"
tokio = "1.26"

[features]
datafusion = ["dep:datafusion", "dep:datafusion-expr", "dep:async-trait"]

[[example]]
name = "datafusion"
required-features = ["datafusion"]

[package.metadata.docs.rs]
features = ["yore", "serde"]
