[package]
name = "dbase"
version = "0.6.0"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
description = "Read & Write .dbf in Rust"
license = "MIT"
readme = "README.md"
keywords = ["dbase", "dbf"]
homepage = "https://github.com/tmontaigu/dbase-rs"
repository = "https://github.com/tmontaigu/dbase-rs"
edition = "2021"

[lib]
name = "dbase"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.4.3"
time = { version = "0.3", features = ["std"] }
serde = { version = "1.0.102", optional = true }
yore = { version = "1.0.1", optional = true }
datafusion = { version = "46", optional = true }
datafusion-expr = { version = "46", optional = true }
async-trait = { version = "0.1", optional = true }
codepage = { version = "0.1.2", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
chrono = { version = "0.4.39", optional = true }
pyo3 = { version = "0.20.0", features = ["extension-module"] }

[dev-dependencies]
serde_derive = "1.0.102"
tempfile = "3.4.0"
tokio = "1.26"

[features]
default = ["core_intrinsics"]
core_intrinsics = [] 
datafusion = ["dep:datafusion", "dep:datafusion-expr", "dep:async-trait"]
yore = ["dep:yore"]
encoding_rs = ["dep:encoding_rs", "dep:codepage"]
chrono = ["dep:chrono"]

[[example]]
name = "datafusion"
required-features = ["datafusion"]

[package.metadata.docs.rs]
features = ["yore", "serde"]
